refactor: (개발중)정류장 type 보완 및 feature layer 로직 변경